[gd_scene load_steps=16 format=3 uid="uid://dv540k8fcsfsc"]

[ext_resource type="Script" uid="uid://ctfxyue2f7mjk" path="res://Scripts/gun_enemy.gd" id="1_df86t"]
[ext_resource type="Texture2D" uid="uid://2i4wc1tmqdxd" path="res://Art/explosive_enemy_sheet.png" id="2_df86t"]
[ext_resource type="Script" uid="uid://v4nlkn46p8aj" path="res://Scripts/state_machine.gd" id="3_duixa"]
[ext_resource type="Script" uid="uid://deexs4m6fy0b1" path="res://Scripts/gun_enemy_default.gd" id="4_43h3a"]
[ext_resource type="Script" uid="uid://ccybx4amowe1u" path="res://Scripts/gun_enemy_shoot.gd" id="5_s6nft"]
[ext_resource type="PackedScene" uid="uid://cjbpx1lsg06dy" path="res://Scenes/explosive_bullet.tscn" id="6_df86t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s7gxc"]
atlas = ExtResource("2_df86t")
region = Rect2(0, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_df86t"]
atlas = ExtResource("2_df86t")
region = Rect2(24, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_duixa"]
atlas = ExtResource("2_df86t")
region = Rect2(48, 0, 24, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_duixa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7gxc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_df86t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duixa")
}],
"loop": true,
"name": &"walk",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wfsuc"]
size = Vector2(35, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4r0la"]
size = Vector2(32, 7)

[sub_resource type="Curve" id="Curve_bqunj"]
_data = [Vector2(0.0116279125, 1), 0.0, 0.0, 0, 0, Vector2(0.77906984, 0.77528095), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_0cwku"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.87209314, 0.9101124), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_e3v2y"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.7965117, 0.8764045), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="ExplosiveGunEnemy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_df86t")
health = 15.0
contact_damage = 1.0
knockback_speed = Vector2(250, 25)
bullet_damage = 4.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 32)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_duixa")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wfsuc")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_wfsuc")

[node name="FloorDetector" type="Area2D" parent="."]
position = Vector2(35, 19)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorDetector"]
position = Vector2(0, 14)
shape = SubResource("RectangleShape2D_4r0la")

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="GunCooldown" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(500, 0)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_duixa")
initial_state = NodePath("Default")

[node name="Default" type="Node" parent="StateMachine" node_paths=PackedStringArray("Enemy")]
script = ExtResource("4_43h3a")
Enemy = NodePath("../..")
speed = 50.0
metadata/_custom_type_script = "uid://deexs4m6fy0b1"

[node name="Shoot" type="Node" parent="StateMachine" node_paths=PackedStringArray("Enemy")]
script = ExtResource("5_s6nft")
Enemy = NodePath("../..")
windup_timer = 0.25
cooldown_timer = 0.15
BULLET = ExtResource("6_df86t")
metadata/_custom_type_script = "uid://ccybx4amowe1u"

[node name="GunRotator" type="Node2D" parent="."]

[node name="ShootPosition" type="Marker2D" parent="GunRotator"]
position = Vector2(27, 0)
gizmo_extents = 20.0

[node name="ShootParticles" type="CPUParticles2D" parent="GunRotator"]
position = Vector2(27, 0)
emitting = false
lifetime = 0.3
one_shot = true
explosiveness = 1.0
local_coords = true
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
scale_amount_min = 2.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_bqunj")

[node name="HitParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.3
one_shot = true
explosiveness = 1.0
local_coords = true
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 400.0
initial_velocity_max = 400.0
scale_amount_min = 3.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_0cwku")

[node name="DieParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.7
one_shot = true
explosiveness = 1.0
direction = Vector2(0, -1)
spread = 75.0
initial_velocity_min = 200.0
initial_velocity_max = 300.0
scale_amount_min = 5.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_e3v2y")

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
[connection signal="finished" from="DieParticles" to="." method="_on_die_particles_finished"]
